--- a/aboutContact.html
+++ b/aboutContact.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>aboutClient</title>
+	<title>联系我们</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/header.css">
@@ -37,6 +37,7 @@
               <li>地址：北京市海淀区丰慧中路7号新材料创业大厦6层B622-623</li>
               <li>网址： www.panabit.com</li>
               <li>邮箱： webmaster@panabit.com</li>
+              <li>技术论坛： <a href="http://forum.panabit.com/">http://forum.panabit.com/</a></li>
             </ul>
           </div>
         </div>
@@ -59,7 +60,7 @@
                 IXCache缓存
               </li>
               <li class="col-md-8" style="margin-top: 50px;">
-                张工：535935637
+                缓存交流群61310125 
               </li>
             </ul>
           </div>
@@ -69,7 +70,7 @@
                 Panlog日志
               </li>
               <li class="col-md-8">
-                张工：357879240
+                日志交流群 397407302
               </li>
               <li class="col-md-4">
                 PA日志技术群
