--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
-<nav class="index-nav navbar navbar-fixed-top navbar-default navbar-index" role="navigation">
+﻿<nav class="index-nav navbar navbar-fixed-top navbar-default navbar-index" role="navigation">
   <div class="container-fluid">
     <!-- logo -->
     <div class="navbar-header header-top">
-      <a class="navbar-brand header-brand" href="./index.html"><img src="img/logo1.png" alt=""></a>
+      <a class="navbar-brand header-brand" href="./index.html"><img src="img/logo.png" alt=""></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <div class="navbar-right">
@@ -37,11 +37,11 @@
               <h3 id="menu-title-20" class="menu-text-item-tit J-mobile-li-third">解决方案</h3>
               <div class="menu-text-item-con J-mobile-third" role="list" tabindex="0" aria-labelledby="menu-title-20">
                 <ul class="text-item-col" role="presentation">
-                  <li><a href="productIsp.html">运营商</a></li>
-                  <li><a href="productEnterprise.html">企业版</a></li>
-                  <li><a href="productAreas.html">小区版</a></li>
-                  <li><a href="productNetcafe.html">网吧版</a></li>
-                  <li><a href="productSmb.html">SMB版</a></li>
+                  <li><a href="solution.html">运营商解决方案</a></li>
+                  <li><a href="solution.html">企业解决方案</a></li>
+                  <li><a href="solution.html">小区解决方案</a></li>
+                  <li><a href="solution.html">网吧解决方案</a></li>
+                  <li><a href="solution.html">SMB解决方案</a></li>
                 </ul>
               </div>
             </div>
