--- a/productAreas.html
+++ b/productAreas.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>aboutClient</title>
+	<title>Panabit小区版</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/product.css">
   <link rel="stylesheet" href="css/productAreas.css">
@@ -31,22 +32,17 @@
           <ul class="row block">
             <li class="col-md-4">
               <div>
-                <h2>6<span>千兆</span></h2>
-                <p>电口光口</p>
+                <p>一专多能</p>
               </div>
             </li>
             <li class="col-md-4">
               <div>
-                <p>高达</p>
-                <h2>4<span>Gbps</span></h2>
-                <p>吞吐</p>
+                <p>按年租赁</p>
               </div>
             </li>
             <li class="col-md-4">
               <div>
-                <p>高达</p>
-                <h2>3<span>万</span></h2>
-                <p>并发用户</p>
+                <p>平滑升级</p>
               </div>
             </li>
           </ul>
@@ -90,7 +86,7 @@
   </div>
   <div id="footer"></div>
   <script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-  <script src="js/common.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src='js/common.js'></script>
 </body>
 </html>
