--- a/productNetcafe.html
+++ b/productNetcafe.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>aboutClient</title>
+  <title>Panabit网吧版</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/header.css">
@@ -19,12 +19,12 @@
     <section class="outer-section">
       <div class="content1">
         <div>
-          <!-- <h1 class="product-content-title">Panabit最好用的智能应用路由</h1> -->
+          <h1 class="product-content-title">Panabit最好用的智能应用路由</h1>
           <h1 class="product-content-subtitle">网吧版</h1>
         </div>
       </div>
        <!-- 中间图片 -->
-      <div class="product-img" style="top:305px">
+      <div class="product-img">
         <img src="img/product-netcafe.png" alt="">
       </div>
       <div class="content2 content-block-group">
@@ -33,22 +33,17 @@
           <ul class="row block">
             <li class="col-md-4">
               <div>
-                <h2>6<span>千兆</span></h2>
-                <p>电口光口</p>
+                <p>游戏流畅</p>
               </div>
             </li>
             <li class="col-md-4">
               <div>
-                <p>高达</p>
-                <h2>4<span>Gbps</span></h2>
-                <p>吞吐</p>
+                <p>视频秒开</p>
               </div>
             </li>
             <li class="col-md-4">
               <div>
-                <p>高达</p>
-                <h2>3<span>万</span></h2>
-                <p>并发用户</p>
+                <p>一键维护</p>
               </div>
             </li>
           </ul>
