--- a/case.html
+++ b/case.html
@@ -1,12 +1,14 @@
-<div class="container">
+﻿<div class="container">
   <div class="row case-nav">
-    <div class="content-title col-sm-4">解决方案</div>
-    <ul class="row col-sm-4 col-sm-offset-4">
-      <li class="col-md-3"><a href="">运营商</a></li>
-      <li class="col-md-3"><a href="">企业</a></li>
-      <li class="col-md-3"><a href="">小区</a></li>
-      <li class="col-md-3"><a href="">高校</a></li>
-    </ul>
+    <div class="content-title col-sm-2">解决方案</div>
+      <ul class="nav nav-pills">
+        <li role="presentation" class="active"><a href="#">运营商</a></li>
+        <li role="presentation"><a href="#">企业</a></li>
+        <li role="presentation"><a href="#">小区</a></li> 
+        <li role="presentation"><a href="#">高校</a></li>
+		<a href="solution.html" class="solution-more">more</a>
+      </ul>
+      
   </div>
   <ul class="row case-content">
     <li class="col-md-3">
