--- a/footer.html
+++ b/footer.html
@@ -28,7 +28,7 @@
           <ul>
             <li><a href="" target="_top">软件下载</a></li>
             <li><a href="" target="_top">渠道合作</a></li>
-            <li><a href="" target="_top">论坛</a></li>
+            <li><a href="http://forum.panabit.com/" target="_top">论坛</a></li>
           </ul>
         </div>
       </div>
@@ -62,7 +62,7 @@
             <span id="wechat"></span>
             <span id="weibo" onclick="linkHtml('http://www.weibo.com/panabit', true)"></span>
             <span id="qq"></span>
-            <span id="email"></span>
+            <span id="forum" onclick="linkHtml('http://forum.panabit.com/', true)"></span>
           </div>
         </div>
       </div>
