--- a/productEnterprise.html
+++ b/productEnterprise.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>aboutClient</title>
+  <title>Panabit企业版</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/header.css">
@@ -32,22 +32,17 @@
           <ul class="row block">
             <li class="col-md-4">
               <div>
-                <h2>6<span>千兆</span></h2>
-                <p>电口光口</p>
+                <p>稳定高效</p>
               </div>
             </li>
             <li class="col-md-4">
               <div>
-                <p>高达</p>
-                <h2>4<span>Gbps</span></h2>
-                <p>吞吐</p>
+                <p>带宽调优</p>
               </div>
             </li>
             <li class="col-md-4">
               <div>
-                <p>高达</p>
-                <h2>3<span>万</span></h2>
-                <p>并发用户</p>
+                <p>安全易用</p>
               </div>
             </li>
           </ul>
