1.修改内容排版 2.tab切换 3.header的下拉菜单效果

--- a/aboutClient.html
+++ b/aboutClient.html
@@ -19,55 +19,63 @@
        荣誉客户 
     </section>
     <section class="outer-section content2">
-      <div class="content-nav">
-          <ul class="row" id="tab">
-            <li class="col-md-2" id="inner0">运营商</li>
-            <li class="col-md-3" id="inner1">政府/部队/事业单位</li>
-            <li class="col-md-2" id="inner2">高校</li>
-            <li class="col-md-2" id="inner3">企业</li>
-            <li class="col-md-3" id="inner4">其他行业</li>
-          </ul>
-      </div>
-      <div class="row content-container">
-        <ul class="col-md-5 col-md-offset-1">
-          <li>中国移动通信集团广东有限公司</li>
-          <li>中国移动通信集团河北有限公司</li>
-          <li>中国移动通信集团山西有限公司</li>
-          <li>中国铁通北京分公司</li>
-          <li>中国铁通上海分公司</li>
-          <li>&nbsp</li>
-          <li>&nbsp</li>
-          <li>中国铁通广东分公司</li>
-          <li>中国铁通陕西分公司</li>
-          <li>中国铁通云南分公司</li>
-          <li>中国铁通吉林分公司</li>
-          <li>中国铁通辽宁分公司</li>
-          <li>中国铁通河北分公司</li>
-          <li>中国铁通广西分公司</li>
-          <li>湖南省广播电影电视局</li>
-          <li>江苏省广播电影电视局</li>
-          <li>河北省广播电影电视局</li>
-          <li>山西省广播电影电视局</li>
-          <li>河南省广播电影电视局</li>
-          <li>贵州省广播电影电视局</li>
-        </ul>
-        <ul class="col-md-6">
-          <li>深圳市天威视讯股份有限公司</li>
-          <li>浙江华数广电网络股份有限公司</li>
-          <li>鹏博士电信传媒集团</li>
-          <li>北京电信通电信工程有限公司</li>
-          <li>长城宽带网络服务有限公司</li>
-          <li>方正宽带网络服务股份有限公司</li>
-          <li>艾普网络股份有限公司浙江华数传媒集团</li>
-          <li>北京歌华有线电视网络股份有限公司</li>
-          <li>宁夏广播电视网络有限公司</li>
-          <li>山东广播电视网络有限公司</li>
-          <li>中国移动通信集团广东有限公司深圳分公司</li>
-          <li>中国移动通信集团贵州有限公司贵阳分公司</li>
-          <li>中国电信股份有限公司长泰分公司</li>
-          <li>速丰电信科技（上海）有限公司</li>
-          <li>北京国创富盛通信股份有限公司</li>
-        </ul>
+      <div class="container">
+        <div class="content-nav">
+            <ul class="row" id="tab">
+              <li class="col-md-2" id="inner0">运营商</li>
+              <li class="col-md-3" id="inner1">政府/部队/事业单位</li>
+              <li class="col-md-2" id="inner2">高校</li>
+              <li class="col-md-2" id="inner3">企业</li>
+              <li class="col-md-3" id="inner4">其他行业</li>
+            </ul>
+        </div>
+        <div class="content-container">
+          <div class="bottom-table row">
+            <ul class="col-md-6">
+              <li>中国移动通信集团广东有限公司</li>
+              <li>中国移动通信集团河北有限公司</li>
+              <li>中国移动通信集团山西有限公司</li>
+              <li>中国铁通北京分公司</li>
+              <li>中国铁通上海分公司</li>
+              <li>&nbsp</li>
+              <li>&nbsp</li>
+              <li>中国铁通广东分公司</li>
+              <li>中国铁通陕西分公司</li>
+              <li>中国铁通云南分公司</li>
+              <li>中国铁通吉林分公司</li>
+              <li>中国铁通辽宁分公司</li>
+              <li>中国铁通河北分公司</li>
+              <li>中国铁通广西分公司</li>
+              <li>湖南省广播电影电视局</li>
+              <li>江苏省广播电影电视局</li>
+              <li>河北省广播电影电视局</li>
+              <li>山西省广播电影电视局</li>
+              <li>河南省广播电影电视局</li>
+              <li>贵州省广播电影电视局</li>
+            </ul>
+            <ul class="col-md-6">
+              <li>深圳市天威视讯股份有限公司</li>
+              <li>浙江华数广电网络股份有限公司</li>
+              <li>鹏博士电信传媒集团</li>
+              <li>北京电信通电信工程有限公司</li>
+              <li>长城宽带网络服务有限公司</li>
+              <li>方正宽带网络服务股份有限公司</li>
+              <li>艾普网络股份有限公司浙江华数传媒集团</li>
+              <li>北京歌华有线电视网络股份有限公司</li>
+              <li>宁夏广播电视网络有限公司</li>
+              <li>山东广播电视网络有限公司</li>
+              <li>中国移动通信集团广东有限公司深圳分公司</li>
+              <li>中国移动通信集团贵州有限公司贵阳分公司</li>
+              <li>中国电信股份有限公司长泰分公司</li>
+              <li>速丰电信科技（上海）有限公司</li>
+              <li>北京国创富盛通信股份有限公司</li>
+            </ul>
+          </div>
+          <div class="bottom-table row" style="display: none;">tab2</div>
+          <div class="bottom-table row" style="display: none;">tab3</div>
+          <div class="bottom-table row" style="display: none;">tab4</div>
+          <div class="bottom-table row" style="display: none;">tab5</div>
+        </div>
       </div>
     </section>
   </div>
@@ -89,6 +97,7 @@
       tab[i].onclick=function() {
         $(this).addClass("tabActive").siblings('li').removeClass('tabActive');
         var index = ($(this).index())
+        console.log(index)
         $('.bottom-table').eq(index).show().siblings('.bottom-table').hide()
       }
     }
