--- a/aboutContact.html
+++ b/aboutContact.html
@@ -21,7 +21,7 @@
     <section class="outer-section content1" id="container">
     </section>
     <section class="outer-section content2">
-      <div>
+      <div class="container">
         <h4 class="content-title">联系方式</h4>
         <div class="row content-row">
           <div class="col-md-4 col-md-offset-1">
@@ -44,7 +44,7 @@
       </div>
     </section>
     <section class="outer-section content3">
-      <div>
+      <div class="container">
         <h4 class="content-title">在线技术服务</h4>
         <div class="row content-row">
           <div class="col-md-5 col-md-offset-1">
