--- a/aboutIndex.html
+++ b/aboutIndex.html
@@ -21,31 +21,35 @@
        公司简介 
     </section>
     <section class="outer-section content2">
-      <div><img src="img/logo-sm.png" alt=""></div>
-      <p>北京派网软件有限公司是国内领先的网络应用层分析、优化和管理产品和解决方案供应商。基于广受好评的网络应用识别优化引擎以及业界领先的PANAOS操作系统，Panabit致力于提高用户网络应用可视性和可管理性，为用户提供高效、稳定、开放的应用层网络通信平台、产品和服务。</p>
+      <div style="text-align: center"><img src="img/logo-sm.png" alt=""></div>
+      <div class="container">
+        <p>北京派网软件有限公司是国内领先的网络应用层分析、优化和管理产品和解决方案供应商。基于广受好评的网络应用识别优化引擎以及业界领先的PANAOS操作系统，Panabit致力于提高用户网络应用可视性和可管理性，为用户提供高效、稳定、开放的应用层网络通信平台、产品和服务。</p>
+      </div>
     </section>
     <section class="outer-section content3">
-      <h4 class="content-title">企业文化</h4>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="icon"></div>
-          <h5>互联网精神</h5>
-          <p>自2004年团队创建伊始，Panabit就深深注入了互联网基因。凭借广大互联网用户对标准版的喜爱和积极反馈，Panabit保持了对互联网应用的最大敏感性。追求卓越的互联网精神，让我们把每个细节功能做到极致，快速迭代的互联网开发模式让极致变成完美。互联网给了我们创造卓越的勇气和力量，我们也用免费使用的标准版回馈互联网社区。互联网缔造了Panabit，Panabit也在改变互联网。</p>
-        </div>
-        <div class="col-md-6">
-          <div class="icon"></div>
-          <h5>应用识别与优化</h5>
-          <p>每时每刻，都有超过5T的互联网流量穿越Panabit的应用识别引擎，Panabit在现网保持着超过95%的识别率，可以辨识和控制着13大类近千种应用，业界无出其右者。自定义的PSDL（Protocol Signature Description Language）语言和流量智能分析机器人，让Panabit拥有了新应用识别快速反应的卓越能力。在应用识别的基础上，Panabit陆续发展出了应用路由、应用负载均衡等后续功能，成为互联网出口的一体化优化管理平台。</p>
-        </div>
-        <div class="col-md-6">
-          <div class="icon"></div>
-          <h5>开放的数据面操作系统PANAOS</h5>
-          <p>不同于大多数厂商使用改装过的Linux/FreeBSD等通用操作系统，Panabit使用自研的数据面操作系统PANAOS。Panabit产品采用虚拟化技术完成了数据面和控制面分离，从驱动、内存管理到任务调度等数据面核心任务，都由PANAOS一肩承担。利用虚拟化OS技术，PANAOS赋予了产品软件永不宕机超高稳定性。路由、NAT、负载均衡、应用识别与控制等关键基础设施内置PANAOS之中，为用户提供一体化解决方案提供了坚实基础。创新的App虚拟化引擎为加载第三方网关应用提供环境和接口，从而使得PANAOS成为一个开放应用层网络设备平台，具备无限的想象空间。</p>
-        </div>
-        <div class="col-md-6">
-          <div class="icon"></div>
-          <h5>持续创新</h5>
-          <p>产品问世以来，Panabit从未停止过创新的脚步，我们用百倍的努力换来产品特性的持续领先。从过去的识别引擎、快速协议栈到现在的应用路由、应用负载均衡和App开放平台，我们在用创新改变着世界。我们从不担心被人模仿，因为我们深知创新的灵魂无法山寨，卓越的理念根植于我们心中。Panabit处在竞争最激烈的互联网大潮之中，汹涌的波涛托举我们前行，创新是我们不变的风帆。</p>
+      <div class="container">
+        <h4 class="content-title">企业文化</h4>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="icon"></div>
+            <h5>互联网精神</h5>
+            <p>自2004年团队创建伊始，Panabit就深深注入了互联网基因。凭借广大互联网用户对标准版的喜爱和积极反馈，Panabit保持了对互联网应用的最大敏感性。追求卓越的互联网精神，让我们把每个细节功能做到极致，快速迭代的互联网开发模式让极致变成完美。互联网给了我们创造卓越的勇气和力量，我们也用免费使用的标准版回馈互联网社区。互联网缔造了Panabit，Panabit也在改变互联网。</p>
+          </div>
+          <div class="col-md-6">
+            <div class="icon"></div>
+            <h5>应用识别与优化</h5>
+            <p>每时每刻，都有超过5T的互联网流量穿越Panabit的应用识别引擎，Panabit在现网保持着超过95%的识别率，可以辨识和控制着13大类近千种应用，业界无出其右者。自定义的PSDL（Protocol Signature Description Language）语言和流量智能分析机器人，让Panabit拥有了新应用识别快速反应的卓越能力。在应用识别的基础上，Panabit陆续发展出了应用路由、应用负载均衡等后续功能，成为互联网出口的一体化优化管理平台。</p>
+          </div>
+          <div class="col-md-6">
+            <div class="icon"></div>
+            <h5>开放的数据面操作系统PANAOS</h5>
+            <p>不同于大多数厂商使用改装过的Linux/FreeBSD等通用操作系统，Panabit使用自研的数据面操作系统PANAOS。Panabit产品采用虚拟化技术完成了数据面和控制面分离，从驱动、内存管理到任务调度等数据面核心任务，都由PANAOS一肩承担。利用虚拟化OS技术，PANAOS赋予了产品软件永不宕机超高稳定性。路由、NAT、负载均衡、应用识别与控制等关键基础设施内置PANAOS之中，为用户提供一体化解决方案提供了坚实基础。创新的App虚拟化引擎为加载第三方网关应用提供环境和接口，从而使得PANAOS成为一个开放应用层网络设备平台，具备无限的想象空间。</p>
+          </div>
+          <div class="col-md-6">
+            <div class="icon"></div>
+            <h5>持续创新</h5>
+            <p>产品问世以来，Panabit从未停止过创新的脚步，我们用百倍的努力换来产品特性的持续领先。从过去的识别引擎、快速协议栈到现在的应用路由、应用负载均衡和App开放平台，我们在用创新改变着世界。我们从不担心被人模仿，因为我们深知创新的灵魂无法山寨，卓越的理念根植于我们心中。Panabit处在竞争最激烈的互联网大潮之中，汹涌的波涛托举我们前行，创新是我们不变的风帆。</p>
+          </div>
         </div>
       </div>
     </section>
