--- a/case.html
+++ b/case.html
@@ -1,55 +1,193 @@
 ﻿<div class="container">
   <div class="row case-nav">
     <div class="content-title col-sm-2">解决方案</div>
-      <ul class="nav nav-pills">
-        <li role="presentation" class="active"><a href="#">运营商</a></li>
-        <li role="presentation"><a href="#">企业</a></li>
-        <li role="presentation"><a href="#">小区</a></li> 
-        <li role="presentation"><a href="#">高校</a></li>
-		<a href="solution.html" class="solution-more">more</a>
+      <ul id="case-tab" class="nav nav-pills">
+        <li role="presentation" class="active">运营商</li>
+        <li role="presentation">企业</li>
+        <li role="presentation">小区</li> 
+        <li role="presentation">高校</li>
+		    <a href="solution.html" class="solution-more">more</a>
       </ul>
-      
   </div>
-  <ul class="row case-content">
-    <li class="col-md-3">
-        <a href="#">
-          <img src="img/case1.jpg" alt="中国移动网络游戏加速">
-          <div class="mask">
-            <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
-            <span class="btn">更多详情</span>
-          </div>
-        </a>
-        <a href="#"><h2>中国移动网络游戏加速</h2></a>
-    </li>
-    <li class="col-md-3">
-        <a href="#">
-          <img src="img/case2.jpg" alt="智能DNS管控在实际中应用">
-          <div class="mask">
-            <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
-            <span class="btn">更多详情</span>
-          </div>
-        </a>
-        <a href="#"><h2>中国移动网络游戏加速</h2></a>
-    </li>
-    <li class="col-md-3">
-        <a href="#">
-          <img src="img/case3.jpg" alt="网络大数据系统分析方案">
-          <div class="mask">
-            <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
-            <span class="btn">更多详情</span>
-          </div>
-        </a>
-        <a href="#"><h2>网络大数据系统分析方案</h2></a>
-    </li>
-    <li class="col-md-3">
-        <a href="#">
-          <img src="img/case4.jpg" alt="智能应用网关网络出口解决方案">
-          <div class="mask">
-            <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
-            <span class="btn">更多详情</span>
-          </div>
-        </a>
-        <a href="#"><h2>智能应用网关网络出口解决方案</h2></a>
-    </li>
-  </ul>
+  <div>
+    <ul class="row case-content tab-content">
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case1.jpg" alt="中国移动网络游戏加速">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>中国移动网络游戏加速</h2></a>
+      </li>
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case2.jpg" alt="智能DNS管控在实际中应用">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>中国移动网络游戏加速</h2></a>
+      </li>
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case3.jpg" alt="网络大数据系统分析方案">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>网络大数据系统分析方案</h2></a>
+      </li>
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case4.jpg" alt="智能应用网关网络出口解决方案">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>智能应用网关网络出口解决方案</h2></a>
+      </li>
+    </ul>
+    <ul class="row case-content tab-content" style="display: none;">
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case1.jpg" alt="中国移动网络游戏加速">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>中国移动网络游戏加速1</h2></a>
+      </li>
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case2.jpg" alt="智能DNS管控在实际中应用">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>中国移动网络游戏加速</h2></a>
+      </li>
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case3.jpg" alt="网络大数据系统分析方案">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>网络大数据系统分析方案</h2></a>
+      </li>
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case4.jpg" alt="智能应用网关网络出口解决方案">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>智能应用网关网络出口解决方案</h2></a>
+      </li>
+    </ul>
+    <ul class="row case-content tab-content" style="display: none;">
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case1.jpg" alt="中国移动网络游戏加速">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>中国移动网络游戏加速2</h2></a>
+      </li>
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case2.jpg" alt="智能DNS管控在实际中应用">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>中国移动网络游戏加速</h2></a>
+      </li>
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case3.jpg" alt="网络大数据系统分析方案">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>网络大数据系统分析方案</h2></a>
+      </li>
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case4.jpg" alt="智能应用网关网络出口解决方案">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>智能应用网关网络出口解决方案</h2></a>
+      </li>
+    </ul>
+    <ul class="row case-content tab-content" style="display: none;">
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case1.jpg" alt="中国移动网络游戏加速">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>中国移动网络游戏加速3</h2></a>
+      </li>
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case2.jpg" alt="智能DNS管控在实际中应用">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>中国移动网络游戏加速</h2></a>
+      </li>
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case3.jpg" alt="网络大数据系统分析方案">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>网络大数据系统分析方案</h2></a>
+      </li>
+      <li class="col-md-3">
+          <a href="#">
+            <img src="img/case4.jpg" alt="智能应用网关网络出口解决方案">
+            <div class="mask">
+              <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+              <span class="btn">更多详情</span>
+            </div>
+          </a>
+          <a href="#"><h2>智能应用网关网络出口解决方案</h2></a>
+      </li>
+    </ul>
+  </div>
 </div>
+<script>
+  var tab = $('#case-tab').find('li')
+  for (var i = 0; i < tab.length; i++) {
+    tab[i].onclick=function() {
+      $(this).addClass("active").siblings('li').removeClass('active');
+      var index = ($(this).index())
+      console.log(index)
+      $('.tab-content').eq(index).show().siblings('.tab-content').hide()
+    }
+  }
+</script>
