--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
-﻿<nav class="index-nav navbar navbar-fixed-top navbar-default navbar-index" role="navigation">
-  <div class="container-fluid">
+﻿<nav class="navbar navbar-fixed-top navbar-default" role="navigation">
+  <div class="container">
     <!-- logo -->
     <div class="navbar-header header-top">
-      <a class="navbar-brand header-brand" href="./index.html"><img src="img/logo.png" alt=""></a>
+      <a class="navbar-brand header-brand" href="./index.html"></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <div class="navbar-right">
