--- a/headerBottom.html
+++ b/headerBottom.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <nav class="subnav navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container">
       <ul class="nav navbar-nav navbar-left">
         <li><a href="aboutIndex.html"  target="_top">公司简介</a></li>
         <li><a href="aboutContact.html"  target="_top">联系我们</a></li>
