--- a/productAreas.html
+++ b/productAreas.html
@@ -68,19 +68,21 @@
     <section id="case-content">
     </section>
     <section class="outer-section">
-      <div class="client">
-        <h1 class="content-title">荣誉客户</h1>
-        <a href="" class="more"><p>更多客户></p></a>
-        <ul class="row">
-          <li class="col-md-3"><img src="img/product-client1.png" alt=""></li>
-          <li class="col-md-3"><img src="img/product-client2.png" alt=""></li>
-          <li class="col-md-3"><img src="img/product-client3.png" alt=""></li>
-          <li class="col-md-3"><img src="img/product-client4.png" alt=""></li>
-          <li class="col-md-3"><img src="img/product-client5.png" alt=""></li>
-          <li class="col-md-3"><img src="img/product-client6.png" alt=""></li>
-          <li class="col-md-3"><img src="img/product-client7.png" alt=""></li>
-          <li class="col-md-3"><img src="img/product-client8.png" alt=""></li>
-        </ul>
+      <div class="container">
+        <div class="client">
+          <h1 class="content-title">荣誉客户</h1>
+          <a href="" class="more"><p>更多客户></p></a>
+          <ul class="row">
+            <li class="col-md-3"><img src="img/product-client1.png" alt=""></li>
+            <li class="col-md-3"><img src="img/product-client2.png" alt=""></li>
+            <li class="col-md-3"><img src="img/product-client3.png" alt=""></li>
+            <li class="col-md-3"><img src="img/product-client4.png" alt=""></li>
+            <li class="col-md-3"><img src="img/product-client5.png" alt=""></li>
+            <li class="col-md-3"><img src="img/product-client6.png" alt=""></li>
+            <li class="col-md-3"><img src="img/product-client7.png" alt=""></li>
+            <li class="col-md-3"><img src="img/product-client8.png" alt=""></li>
+          </ul>
+        </div>
       </div>
     </section>
   </div>
