--- a/productBottomHeader.html
+++ b/productBottomHeader.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <nav class="subnav navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container">
       <ul class="nav navbar-nav navbar-left">
         <li><a href="productIsp.html"  target="_top">运营商</a></li>
         <li><a href="productEnterprise.html"  target="_top">企业版</a></li>
