--- a/productSmb.html
+++ b/productSmb.html
@@ -80,77 +80,81 @@
       </div>
     </section>
     <section class="content5">
-      <ul class="row">
-        <li class="col-md-6 content-text">
-          <h1 class="content-title">最低的企业带宽成本</h1>
-          <p>实时掌控企业带宽使用状况，可立即根据实际情况调整带宽租用，支持多达6条WAN线小带宽汇聚，大幅度降低企业带宽成本，有效避免年年带宽升级、网络天天卡顿的顽疾。</p>
-        </li>
-        <li class="col-md-6">
-          <img src="img/product-smb1.png" alt="">
-        </li>
-      </ul>
-      <ul class="row">
-        <li class="col-md-6">
-          <img src="img/product-smb2.png" alt="">
-        </li>
-        <li class="col-md-6 content-text">
-          <h1 class="content-title">最精准的上网行为管控</h1>
-          <p>超过95%的识别率，可辨识和管控常见的14大类逾千种应用，并支持第三方URL库，杜绝工作时段内一切无关的网络活动，保障视频会议、ERP、OA和电子邮件等关键应用正常运行！告别拥堵，特有的应用优先调度，控制P2P上下行流量，合理分配带宽资源，时刻保证网畅通无阻！</p>
-        </li>
-      </ul>
-      <ul class="row">
-        <li class="col-md-6 content-text">
-          <h1 class="content-title">最卓越的WiFi优化和管控</h1>
-          <p>专业的流量管控，有效提高WiFi网络的带机能力，阻断私接路由和随身WiFi等行为，支持Web认证和微信认证，提供微信吸粉功能。</p>
-        </li>
-        <li class="col-md-6">
-          <img src="img/product-smb3.png" alt="">
-        </li>
-      </ul>
-      <ul class="row">
-        <li class="col-md-6">
-          <img src="img/product-smb4.png" alt="">
-        </li>
-        <li class="col-md-6 content-text">
-          <h1 class="content-title">最全面的日志审计和用户数据</h1>
-          <p>专业的日志审计系统，满足实现82号令的特殊事件审计；记录用户上网行为，提供可视化报表，为网络管理和优化提供决策依据。</p>
-        </li>
-      </ul>
-      <ul class="row">
-        <li class="col-md-6 content-text">
-          <h1 class="content-title">最强大的多分支企业管理</h1>
-          <p>架设企业网络管理私有云平台，在无VPN情况下，可实现海量多分支机构网络管理手段的安全接入、控制、升级和策略统一下发，实现全国统一网管。</p>
-        </li>
-        <li class="col-md-6">
-          <img src="img/product-smb5.png" alt="">
-        </li>
-      </ul>
-      <ul class="row">
-         <li class="col-md-6">
-          <img src="img/product-smb6.png" alt="">
-        </li>
-        <li class="col-md-6 content-text">
-          <h1 class="content-title">最简洁的用户认证和权限管理</h1>
-          <p>支持Radius、LDAP和内部自定义用户的认证和权限管理，实现单点和多分支企业用户漫游。</p>
-        </li>
-      </ul>
-    </ection>
+      <div class="container">
+        <ul class="row">
+          <li class="col-md-6 content-text">
+            <h1 class="content-title">最低的企业带宽成本</h1>
+            <p>实时掌控企业带宽使用状况，可立即根据实际情况调整带宽租用，支持多达6条WAN线小带宽汇聚，大幅度降低企业带宽成本，有效避免年年带宽升级、网络天天卡顿的顽疾。</p>
+          </li>
+          <li class="col-md-6">
+            <img src="img/product-smb1.png" alt="">
+          </li>
+        </ul>
+        <ul class="row">
+          <li class="col-md-6">
+            <img src="img/product-smb2.png" alt="">
+          </li>
+          <li class="col-md-6 content-text">
+            <h1 class="content-title">最精准的上网行为管控</h1>
+            <p>超过95%的识别率，可辨识和管控常见的14大类逾千种应用，并支持第三方URL库，杜绝工作时段内一切无关的网络活动，保障视频会议、ERP、OA和电子邮件等关键应用正常运行！告别拥堵，特有的应用优先调度，控制P2P上下行流量，合理分配带宽资源，时刻保证网畅通无阻！</p>
+          </li>
+        </ul>
+        <ul class="row">
+          <li class="col-md-6 content-text">
+            <h1 class="content-title">最卓越的WiFi优化和管控</h1>
+            <p>专业的流量管控，有效提高WiFi网络的带机能力，阻断私接路由和随身WiFi等行为，支持Web认证和微信认证，提供微信吸粉功能。</p>
+          </li>
+          <li class="col-md-6">
+            <img src="img/product-smb3.png" alt="">
+          </li>
+        </ul>
+        <ul class="row">
+          <li class="col-md-6">
+            <img src="img/product-smb4.png" alt="">
+          </li>
+          <li class="col-md-6 content-text">
+            <h1 class="content-title">最全面的日志审计和用户数据</h1>
+            <p>专业的日志审计系统，满足实现82号令的特殊事件审计；记录用户上网行为，提供可视化报表，为网络管理和优化提供决策依据。</p>
+          </li>
+        </ul>
+        <ul class="row">
+          <li class="col-md-6 content-text">
+            <h1 class="content-title">最强大的多分支企业管理</h1>
+            <p>架设企业网络管理私有云平台，在无VPN情况下，可实现海量多分支机构网络管理手段的安全接入、控制、升级和策略统一下发，实现全国统一网管。</p>
+          </li>
+          <li class="col-md-6">
+            <img src="img/product-smb5.png" alt="">
+          </li>
+        </ul>
+        <ul class="row">
+           <li class="col-md-6">
+            <img src="img/product-smb6.png" alt="">
+          </li>
+          <li class="col-md-6 content-text">
+            <h1 class="content-title">最简洁的用户认证和权限管理</h1>
+            <p>支持Radius、LDAP和内部自定义用户的认证和权限管理，实现单点和多分支企业用户漫游。</p>
+          </li>
+        </ul>
+      </div>
+    </section>
     <section id="case-content">
     </section>
     <section class="outer-section">
-      <div class="client">
-        <h1 class="content-title">荣誉客户</h1>
-        <a href="" class="more"><p>更多客户></p></a>
-        <ul class="row">
-          <li class="col-md-3"><img src="img/product-client1.png" alt=""></li>
-          <li class="col-md-3"><img src="img/product-client2.png" alt=""></li>
-          <li class="col-md-3"><img src="img/product-client3.png" alt=""></li>
-          <li class="col-md-3"><img src="img/product-client4.png" alt=""></li>
-          <li class="col-md-3"><img src="img/product-client5.png" alt=""></li>
-          <li class="col-md-3"><img src="img/product-client6.png" alt=""></li>
-          <li class="col-md-3"><img src="img/product-client7.png" alt=""></li>
-          <li class="col-md-3"><img src="img/product-client8.png" alt=""></li>
-        </ul>
+      <div class="container">
+        <div class="client">
+          <h1 class="content-title">荣誉客户</h1>
+          <a href="" class="more"><p>更多客户></p></a>
+          <ul class="row">
+            <li class="col-md-3"><img src="img/product-client1.png" alt=""></li>
+            <li class="col-md-3"><img src="img/product-client2.png" alt=""></li>
+            <li class="col-md-3"><img src="img/product-client3.png" alt=""></li>
+            <li class="col-md-3"><img src="img/product-client4.png" alt=""></li>
+            <li class="col-md-3"><img src="img/product-client5.png" alt=""></li>
+            <li class="col-md-3"><img src="img/product-client6.png" alt=""></li>
+            <li class="col-md-3"><img src="img/product-client7.png" alt=""></li>
+            <li class="col-md-3"><img src="img/product-client8.png" alt=""></li>
+          </ul>
+        </div>
       </div>
     </section>
   </div>
