--- a/aboutJob.html
+++ b/aboutJob.html
@@ -21,45 +21,46 @@
        招贤纳才 
     </section>
     <section class="outer-section content2">
-      <p>派网软件公司是充满创新的软件企业，Panabit应用层流量管理引擎软件在国内独树一帜，多项技术水平在国内处于领先水平，在业界享有较高的声誉。诚聘助力Panabit事业的有志之士加盟，本招聘信息常年有效，如果您对以下任何岗位感兴趣，欢迎发送岗位名称 + 个人简历到邮箱：webmaster@panabit.com ，邮件主题请表明应聘字样。</p>
-      <h4 class="content-title">招聘职位</h4>
-      <div class="row">
-        <div class="col-sm-2"><p>销售经理</p></div>
-        <ul class="col-sm-6 col-md-offset-2">
-         <li>工作职责：</li>
-         <li>1. 完成公司制定的销售目标；</li>
-         <li>2. 开拓新的客户，完成从测试体验到销售回款的整个销售过程；</li>
-         <li>3. 负责策划、推动符合目标客户行业特点的销售方案；</li>
-         <li>4. 能及时防范销售工作中出现的问题，对于已发生的问题能及时处理解决；</li>
-         <li>5. 为客户提供全面的销售及后期服务，保证客户满意度。</li>
-         <li>任职资格：</li>
-         <li>1. 市场营销或相关专业本科以上学历；</li>
-         <li>2. 三年以上IT行业销售经验，有网络安全、网络分析/优化如DPI/Cache、大型软件项目销售等工作经验者优先；</li>
-         <li>3. 具备一定的客户、渠道及集成商资源者优先；</li>
-         <li>4. 可靠，勤奋，具备超强开拓能力及销售推动力；</li>
-         <li>5. 强烈的目标导向，具备自我提升的意愿和能力；</li>
-         <li>6. 具备优秀的口头和书面表达能力，熟练掌握沟通技巧；</li>
-         <li>7. 具备较强的分析、解决问题的能力，及快速反应能力。</li>
-        </ul>
-      </div>
-      <div class="row">
-        <div class="col-sm-2"><p>售前工程师</p></div>
-        <ul class="col-sm-6 col-md-offset-2">
-         <li>工作职责：</li>
-         <li>1. 完成公司制定的销售目标；</li>
-         <li>2. 开拓新的客户，完成从测试体验到销售回款的整个销售过程；</li>
-         <li>3. 负责策划、推动符合目标客户行业特点的销售方案；</li>
-         <li>4. 能及时防范销售工作中出现的问题，对于已发生的问题能及时处理解决；</li>
-         <li>5. 为客户提供全面的销售及后期服务，保证客户满意度。</li>
-         <li>任职资格：</li>
-         <li>1. 市场营销或相关专业本科以上学历；</li>
-         <li>2. 三年以上IT行业销售经验，有网络安全、网络分析/优化如DPI/Cache、大型软件项目销售等工作经验者优先；</li>
-         <li>3. 具备一定的客户、渠道及集成商资源者优先；</li>
-         <li>4. 可靠，勤奋，具备超强开拓能力及销售推动力；</li>
-         <li>5. 强烈的目标导向，具备自我提升的意愿和能力；</li>
-         <li>6. 具备优秀的口头和书面表达能力，熟练掌握沟通技巧；</li>
-         <li>7. 具备较强的分析、解决问题的能力，及快速反应能力。</li>
-        </ul>
+      <div class="container">
+        <p>派网软件公司是充满创新的软件企业，Panabit应用层流量管理引擎软件在国内独树一帜，多项技术水平在国内处于领先水平，在业界享有较高的声誉。诚聘助力Panabit事业的有志之士加盟，本招聘信息常年有效，如果您对以下任何岗位感兴趣，欢迎发送岗位名称 + 个人简历到邮箱：webmaster@panabit.com ，邮件主题请表明应聘字样。</p>
+        <div class="row">
+          <div class="col-sm-2"><p>销售经理</p></div>
+          <ul class="col-sm-6 col-md-offset-2">
+           <li>工作职责：</li>
+           <li>1. 完成公司制定的销售目标；</li>
+           <li>2. 开拓新的客户，完成从测试体验到销售回款的整个销售过程；</li>
+           <li>3. 负责策划、推动符合目标客户行业特点的销售方案；</li>
+           <li>4. 能及时防范销售工作中出现的问题，对于已发生的问题能及时处理解决；</li>
+           <li>5. 为客户提供全面的销售及后期服务，保证客户满意度。</li>
+           <li>任职资格：</li>
+           <li>1. 市场营销或相关专业本科以上学历；</li>
+           <li>2. 三年以上IT行业销售经验，有网络安全、网络分析/优化如DPI/Cache、大型软件项目销售等工作经验者优先；</li>
+           <li>3. 具备一定的客户、渠道及集成商资源者优先；</li>
+           <li>4. 可靠，勤奋，具备超强开拓能力及销售推动力；</li>
+           <li>5. 强烈的目标导向，具备自我提升的意愿和能力；</li>
+           <li>6. 具备优秀的口头和书面表达能力，熟练掌握沟通技巧；</li>
+           <li>7. 具备较强的分析、解决问题的能力，及快速反应能力。</li>
+          </ul>
+        </div>
+        <div class="row">
+          <div class="col-sm-2"><p>售前工程师</p></div>
+          <ul class="col-sm-6 col-md-offset-2">
+           <li>工作职责：</li>
+           <li>1. 完成公司制定的销售目标；</li>
+           <li>2. 开拓新的客户，完成从测试体验到销售回款的整个销售过程；</li>
+           <li>3. 负责策划、推动符合目标客户行业特点的销售方案；</li>
+           <li>4. 能及时防范销售工作中出现的问题，对于已发生的问题能及时处理解决；</li>
+           <li>5. 为客户提供全面的销售及后期服务，保证客户满意度。</li>
+           <li>任职资格：</li>
+           <li>1. 市场营销或相关专业本科以上学历；</li>
+           <li>2. 三年以上IT行业销售经验，有网络安全、网络分析/优化如DPI/Cache、大型软件项目销售等工作经验者优先；</li>
+           <li>3. 具备一定的客户、渠道及集成商资源者优先；</li>
+           <li>4. 可靠，勤奋，具备超强开拓能力及销售推动力；</li>
+           <li>5. 强烈的目标导向，具备自我提升的意愿和能力；</li>
+           <li>6. 具备优秀的口头和书面表达能力，熟练掌握沟通技巧；</li>
+           <li>7. 具备较强的分析、解决问题的能力，及快速反应能力。</li>
+          </ul>
+        </div>
       </div>
     </section>
   </div>
