--- a/solution.html
+++ b/solution.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/product.css">
   <link rel="stylesheet" href="css/solution.css">
 </head>
 <body>
@@ -22,34 +23,37 @@
       </div>
     </section>
     <section class="outer-section">
-      <div class="content-nav">
-        <ul class="row" id="tab">
-          <li class="col-md-3" id="inner0">运营商</li>
-          <li class="col-md-3" id="inner1">企业</li>
-          <li class="col-md-3" id="inner2">小区</li>
-          <li class="col-md-3" id="inner3">网吧</li>
-        </ul>
-        <p class="content-container">Panabit专门为全国普教行业提供的一款高性能、高可用性、功能丰富的出口一体优化设备。处理能力为600Mbps，特别适用于同时在线800人以下的普教客户群体。不但可以满足用户对网络流量最细致粒度的可视、可控、可审计的核心需求，同时能够提供业内领先的应用分流、应用负载均衡及其他丰富功能。</p>
+      <div class="container">
+        <div class="content-nav">
+          <ul class="row" id="tab">
+            <li class="col-md-3" id="inner0">运营商</li>
+            <li class="col-md-3" id="inner1">企业</li>
+            <li class="col-md-3" id="inner2">小区</li>
+            <li class="col-md-3" id="inner3">网吧</li>
+          </ul>
+        </div>
       </div>
-      <div class="content-con">
-        <ul class="row">
-          <li class="col-md-4">性能卓越的出口一体化网关</li>
-          <li class="col-md-5">PPPOE</li>
-          <li class="col-md-3">移动终端及业务识别</li>
-          <li class="col-md-4">NAT</li>
-          <li class="col-md-5">认证：Radius\LDAP\ 本地认证\ 第三方认证</li>
-          <li class="col-md-3">DHCP</li>
-          <li class="col-md-4">负载均衡（4-7 层）</li>
-          <li class="col-md-5">共享用户检测：7 层协议特征检测方式</li>
-          <li class="col-md-3">WiFi 带机与BYOD 管控</li>
-        </ul>
-      </div>
-    </section>
-    <section id="case-content">
     </section>
     <section class="outer-section size bottom-table">
-      <h1 class="content-title">运营商版规格型号</h1>
-      <table class="table" id="merchant">
+      <div class="container">
+        <p class="content-container">Panabit专门为全国普教行业提供的一款高性能、高可用性、功能丰富的出口一体优化设备。处理能力为600Mbps，特别适用于同时在线800人以下的普教客户群体。不但可以满足用户对网络流量最细致粒度的可视、可控、可审计的核心需求，同时能够提供业内领先的应用分流、应用负载均衡及其他丰富功能。</p>
+        <div class="content-con">
+          <ul class="row">
+            <li class="col-md-4">性能卓越的出口一体化网关</li>
+            <li class="col-md-5">PPPOE</li>
+            <li class="col-md-3">移动终端及业务识别</li>
+            <li class="col-md-4">NAT</li>
+            <li class="col-md-5">认证：Radius\LDAP\ 本地认证\ 第三方认证</li>
+            <li class="col-md-3">DHCP</li>
+            <li class="col-md-4">负载均衡（4-7 层）</li>
+            <li class="col-md-5">共享用户检测：7 层协议特征检测方式</li>
+            <li class="col-md-3">WiFi 带机与BYOD 管控</li>
+          </ul>
+        </div>
+        <section id="case-content">
+        </section>
+        <h1 class="content-title">运营商版规格型号</h1>
+        <table class="table" id="merchant">
           <thead>
             <tr>
               <td>型号</td>
@@ -154,10 +158,12 @@
             </tr>
           </tbody>
         </table>
+      </div>
     </section>
     <section class="outer-section size bottom-table">
-      <h1 class="content-title">企业版规格型号</h1>
-      <table class="table" id="merchant">
+      <div class="container">
+        <h1 class="content-title">企业版规格型号</h1>
+        <table class="table" id="merchant">
           <thead>
             <tr>
               <td>型号</td>
@@ -235,10 +241,12 @@
             </tr>
           </tbody>
         </table>
+      </div>
     </section>
     <section class="outer-section size bottom-table">
-      <h1 class="content-title">小区版规格型号</h1>
-      <table class="table" id="merchant">
+      <div class="container">
+        <h1 class="content-title">小区版规格型号</h1>
+        <table class="table" id="merchant">
           <thead>
             <tr>
               <td>型号</td>
@@ -377,42 +385,45 @@
             </tr>
           </tbody>
         </table>
+      </div>
     </section>
     <section class="outer-section size bottom-table">
-      <h1 class="content-title">网吧版规格型号</h1>
-      <table class="table" id="merchant">
-        <thead>
-          <tr>
-            <td>型号</td>
-            <td>吞吐</td>
-            <td>用户规模</td>
-            <td>电口</td>
-            <td>光口</td>
-            <td>电源</td>
-            <td>产品说明</td>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>PX1</td>
-            <td>120Mbps</td>
-            <td>500</td>
-            <td>6千兆电口</td>
-            <td>/</td>
-            <td>单电源</td>
-            <td><img src="img/file.png" alt=""></td>
-          </tr>
-          <tr>
-            <td>PX5</td>
-            <td>300Mbps</td>
-            <td>1000</td>
-            <td>6千兆电口</td>
-            <td>/</td>
-            <td>单电源</td>
-            <td><img src="img/file.png" alt=""></td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="container">
+        <h1 class="content-title">网吧版规格型号</h1>
+        <table class="table" id="merchant">
+          <thead>
+            <tr>
+              <td>型号</td>
+              <td>吞吐</td>
+              <td>用户规模</td>
+              <td>电口</td>
+              <td>光口</td>
+              <td>电源</td>
+              <td>产品说明</td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>PX1</td>
+              <td>120Mbps</td>
+              <td>500</td>
+              <td>6千兆电口</td>
+              <td>/</td>
+              <td>单电源</td>
+              <td><img src="img/file.png" alt=""></td>
+            </tr>
+            <tr>
+              <td>PX5</td>
+              <td>300Mbps</td>
+              <td>1000</td>
+              <td>6千兆电口</td>
+              <td>/</td>
+              <td>单电源</td>
+              <td><img src="img/file.png" alt=""></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </section>
   </div>
   <div id="footer"></div>
